updated deps. added title to pdf link. dockerized app. made zipcode not required. fixed assets

--- a/config/database.yml
+++ b/config/database.yml
@@ -14,7 +14,10 @@ test: &test
 
 production:
   <<: *defaults
-  database: resume
+  host: <%= ENV["PG_HOST"] %>
+  database: <%= ENV["PG_DATABASE"] %>
+  username: <%= ENV["PG_USERNAME"] %>
+  password: <%= ENV["PG_PASSWORD"] %>
 
 cucumber:
   <<: *test
